# aws-chatbot-mcp

./: .env.example  .gitignore  ENHANCED_CONVERSATION_TRACKING.md  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION_FIX.md  MEMORY_IMPLEMENTATION.md  README.md  config.yaml.example  demo.py  demo_llm_vs_direct.py  demo_memory_feature.py  main.py  mcp_agent.config.yaml  pyproject.toml  run_cli.py  run_web.py  test_setup.py
examples/: demo.py  demo_enhanced_tracking.py  demo_llm_vs_direct.py
scripts/: run_cli.py  run_web.py
src/aws_chatbot/: aws_agent.py  config.py  conversation_tracker.py  llm_adapter.py  llm_driven_agent.py  main.py  simple_agent.py  web_app.py  working_agent.py
static/: script.js  style.css
templates/: conversation_viewer.html  index.html
tests/: test_setup.py
